--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="shortcut icon" href="src\Image\favicon.png"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap"
       rel="stylesheet"
